--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /HackerRank/obj/Debug
+/Leetcode/obj/Debug
+/TestPad/bin/Debug
+/TestPad/obj/Debug
