Alien game project from book

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@
 /TestPad/obj/Debug
 /TestPad/TestPad.csproj.user
 /TestPad/.vs/TestPad/v14/.suo
-/Leetcode/bin/Debug/Leetcode.vshost.exe
+/Leetcode/bin/Debug/
+/Python/AlienInvasion/__pycache__/
