--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /TestPad/.vs/TestPad/v14/.suo
 /Leetcode/bin/Debug/
 /Python/AlienInvasion/__pycache__/
+/TestPad/packages/Newtonsoft.Json.9.0.1
+/HackerRank/bin/Debug
+/Solution/bin/Debug
+/Solution/obj/Debug
